fix width and hide scrollbar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,3 +16,8 @@ html {
   max-width: 800px;
   margin: auto;
 }
+
+body::-webkit-scrollbar,
+html::-webkit-scrollbar {
+  display: none;
+}
